# sonicpress

./: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  creds_base64.txt  deploy_to_cloud_run.sh  main.py  package-lock.json  package.json  pyproject.toml  startup.sh  streamlit_app.py
agentic-news/: .dockerignore  LICENSE  README.md  cloudbuild.yaml  pyproject.toml
agentic-news/agentic_news/: config.py  providers.py
agentic_news/: __init__.py  agent.py  config.py  constants.py  providers.py
agentic_news/utils/: logger.py
docker/: imagemagick-policy.xml  moviepy_patch.py  test_moviepy.py
litellm_proxy/: Dockerfile  cloudbuild.yaml  deploy_gcloud.sh  litellm_config.yaml  update_app.py
