[tool.poetry]
name = "agentic-news"
version = "0.1.0"
description = "Agentic Personalised Audio News System"
authors = ["raj.k.stats@gmail.com"]
packages = [
    { include = "agentic_news" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
litellm = "1.61.13"
exa-py = "1.8.9"
openai = "1.61.1"
pydub = "0.25.1"
google-cloud-storage = "^2.14.0"
python-dotenv = "1.0.1"
requests = "2.32.3"
streamlit = "^1.31.1"
moviepy = "^1.0.3"
google-api-python-client = "^2.0.0"
google-auth-oauthlib = "^1.0.0"
decorator = "^4.4.2"
imageio = "^2.31.1"
imageio-ffmpeg = "^0.4.9"
numpy = "1.24.3"
pandas = "1.5.3"
python-pptx = "^0.6.23"
beautifulsoup4 = "^4.13.3"
wand = "^0.6.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:main" 