[tool.poetry]
name = "agentic-news"
version = "0.1.0"
description = "Agentic Personalised Audio News System"
authors = ["raj.k.stats@gmail.com"]
packages = [
    { include = "agentic_news" }
]

[tool.poetry.dependencies]
python = "^3.11"
litellm = "1.61.13"
exa-py = "1.8.9"
openai = "1.61.1"
pydub = "0.25.1"
google-cloud-storage = "2.19.0"
python-dotenv = "1.0.1"
requests = "2.32.3"
streamlit = "^1.31.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:main" 